Improved UI of issue comments on mobile.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
 }
 
 .main-content {
-    padding: 1em;
+    padding: 0.5em;
     box-sizing: border-box;
 }
 .menu-button {
