--- a/src/app/issue-details/issue-details.component.scss
+++ b/src/app/issue-details/issue-details.component.scss
@@ -78,7 +78,8 @@
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
         color: #3f51b5;
-        background-color: #e3f1ff;
+        // background-color: #e3f1ff;
+        background-color: #a9bdff;
         box-shadow: 1px 0px 2px #c5cacc;
     }
 
